<resources>
    <string name="app_name">QuestionApp</string>
    <string name="text_Subjects">Subjects</string>
    <string name="btn_math">Mathematics</string>
    <string name="btn_physics">Physics</string>
    <string name="text_records">Records</string>
    <string name="btn_graphs">Graphs</string>
    <string name="text_accuracy_rate">Accuracy rate</string>
    <string name="text_others">Others</string>
    <string name="btn_profile">Profile</string>


    //for text math
    <string name="questions_vector">Questions</string>
    <string name="solutions_vector">Solutions</string>
    <string name="questions_trignometry">Questions</string>
    <string name="questions_dif">Questions</string>
    <string name="questions_vec">Questions</string>
    <string name="solutions_vec">Solutions</string>
    <string name="questions_comp">Questions</string>
    <string name="solutions_comp">Solutions</string>
    <string name="questions_prob">Questions</string>
    <string name="solutions_prob">Solutions</string>
    <string name="questions_alg">Questions</string>
    <string name="solutions_alg">Solutions</string>
    <string name="questions_seq_ser">Questions</string>
    <string name="questions_func">Questions</string>
    <string name="solutions_seq_seri">Solutions</string>
    <string name="solutions_geo">Solutions</string>
    <string name="questions_geo">Questions</string>
    <string name="text_trig">Trignometry</string>
    <string name="text_dif">Differenciation</string>
    <string name="text_vec">Vector</string>
    <string name="text_comp">Complex number</string>
    <string name="text_pro">Probability</string>
    <string name="text_alg">Algebra</string>
    <string name="text_seq_seri">Sequences and series</string>
    <string name="text_geo">Geometry</string>
    <string name="profile_username">Username</string>
    <string name="text_email_address">Email address</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_first_name">First name</string>
    <string name="text_surname">Surname</string>
    <string name="text_password">Password</string>
    <string name="btn_submit">Submit</string>

    //for text physics
    <string name="text_topic_1">Topic 1</string>
    <string name="text_topic_2">Topic 2</string>
    <string name="text_topic_3">Topic 3</string>
    <string name="text_topic_4">Topic 4</string>
    <string name="text_topic_5">Topic 5</string>
    <string name="text_topic_6">Topic 6</string>
    <string name="text_topic_7">Topic 7</string>
    <string name="text_topic_8">Topic 8</string>
    <string name="solutions_1">Solutions</string>
    <string name="solutions_2">Solutions</string>
    <string name="solutions_3">Solutions</string>
    <string name="solutions_4">Solutions</string>
    <string name="solutions_5">Solutions</string>
    <string name="solutions_6">Solutions</string>
    <string name="solutions_7">Solutions</string>
    <string name="solutions_8">Solutions</string>
    <string name="questions_1">Questions</string>
    <string name="questions_2">Questions</string>
    <string name="questions_3">Questions</string>
    <string name="questions_5">Questions</string>
    <string name="questions_6">Questions</string>
    <string name="questions_7">Questions</string>
    <string name="questions_8">Questions</string>
    <string name="text_timer">Please press the button Startto begin your quiz</string>

    //for multiple choice
    <string name="ans_c">C</string>
    <string name="ans_a">A</string>
    <string name="ans_d">D</string>
    <string name="ans_b">B</string>
    <string name="finish">Finish</string>
    <string name="next">NEXT</string>
    <string name="btn_start">Start</string>
    <string name="btn_next">TODO</string>
    <string name="btn_go_back">TODO</string>
    <string name="question_count">Q%d</string>
    <string name="question_text">Text</string>
    <string name="go_to_home">Go to home</string>
    <string name="btn_return_to_home">Return to Home</string>
    <string name="text_time">00:00:00.000</string>
    <string name="solutions">Solutions</string>
    <string name="btn_weak_point">Weak points</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_register">Register</string>
    <string name="total_score">Total Score</string>
    <string name="txt_questions_mistaken">TextView</string>
    <string name="weak_point_image">TODO</string>
</resources>